Added a slow-grilled mustard and herb rack of lamb recipe.

--- a/recipes/mustard-lamb.html
+++ b/recipes/mustard-lamb.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Slow-Grilled Rack of Lamb with Mustard and Herbs</title>
-    </head>
 
-    <body>
-        <h1>Slow-Grilled Rack of Lamb with Mustard and Herbs</h1>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Slow-Grilled Rack of Lamb with Mustard and Herbs</title>
+</head>
+
+<body>
+  <h1>Slow-Grilled Rack of Lamb with Mustard and Herbs</h1>
+  <figure>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2013%2F12%2F06%2F201111-xl-slow-grilled-rack-of-lamb-with-mustard-and-herbs-2000.jpg" alt="Grilled and sliced rack of lamb on a cutting board">
+    <figcaption>Credit: © Fredrika Stjärne</figcaption>
+  </figure>
+
+  <div>
+    <h2>Description</h2>
+    <p>A simple and deicious grilled lamb recipe that can be prepared in under 30 minutes. This recipe was adapted from <a href="https://www.foodandwine.com/recipes/slow-grilled-rack-lamb-mustard-and-herbs">Food & Wine</a> and is one of my personal favorites.</p>
+  </div>
+
+  <div>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 racks of lamb (2 1/2 pounds each), chine bones removed and excess fat trimmed</li>
+      <li>Salt and freshly ground black pepper</li>
+      <li>2 tablespoons Dijon mustard</li>
+      <li>1 tablespoon chopped flat-leaf parsley</li>
+      <li>2 teaspoons chopped rosemary</li>
+      <li>2 teaspoons chopped thyme</li>
+      <li>Caramelized Onion Jam, for serving</li>
+    </ul>
+  </div>
+
+  <div>
+    <h2>Steps</h2>
+    <ol>
+      <li>Light a grill or preheat a grill pan. Season the lamb with salt and pepper. Spread the meaty sides of the racks with the mustard and then press the parsley, rosemary and thyme onto the meat.</li>
+      <li>Sear the racks of lamb over high heat until nicely browned, about 6 minutes. Turn the racks so that they are leaning against each other with the bones pointing up and grill until the meaty sides are nicely browned on the bottom, about 3 minutes. Turn the racks bone side down and lower the heat to moderately low, or move the racks to the cooler side of the grill. Cover the grill and continue cooking until an instant-read thermometer inserted in the center of the meat registers 130° for medium-rare meat, about 20 minutes. Transfer the racks of lamb to a carving board and let rest for 10 minutes.</li>
+      <li>Using a sharp slicing knife, carve the racks of lamb into chops and serve with the caramelized onion jam.</li>
+    </ol>
+  </div>
+
+  <div>
+    <h2>Suggested pairing</h2>
+    <p>Reds from France's Loire Valley, like Cabernet Francs from Chinon, go well with lamb. These wines are amazingly rich and gravelly with a high level of acidity.</p>
+  </div>
+</body>
+
 </html>
