--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 
      <body>
          <h1>Odin Recipes</h1>
+
+         <ul>
+            <li><a href="recipes/mustard-lamb.html">Slow-Grilled Rack of Lamb with Mustard and Herbs</a></li>
+             
+         </ul>
      </body>
  </html>
+
+ 
