Added hawaiian ribeye and honey balsamic chicken thigh recipes and updated the index file.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
          <ul>
             <li><a href="recipes/mustard-lamb.html">Slow-Grilled Rack of Lamb with Mustard and Herbs</a></li>
-             
+            <li><a href="recipes/honey-balsamic-chicken.html">Honey Balsamic Grilled Chicken Thighs</a></li>
+            <li><a href="recipes/hawaiian-ribeye.html">Houston's Hawaiian Ribeye</a></li>
          </ul>
      </body>
  </html>
