--- a/recipes/mustard-lamb.html
+++ b/recipes/mustard-lamb.html
@@ -9,13 +9,13 @@
 <body>
   <h1>Slow-Grilled Rack of Lamb with Mustard and Herbs</h1>
   <figure>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2013%2F12%2F06%2F201111-xl-slow-grilled-rack-of-lamb-with-mustard-and-herbs-2000.jpg" alt="Grilled and sliced rack of lamb on a cutting board">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2013%2F12%2F06%2F201111-xl-slow-grilled-rack-of-lamb-with-mustard-and-herbs-2000.jpg" alt="Grilled and sliced rack of lamb on a cutting board.">
     <figcaption>Credit: © Fredrika Stjärne</figcaption>
   </figure>
 
   <div>
     <h2>Description</h2>
-    <p>A simple and deicious grilled lamb recipe that can be prepared in under 30 minutes. This recipe was adapted from <a href="https://www.foodandwine.com/recipes/slow-grilled-rack-lamb-mustard-and-herbs">Food & Wine</a> and is one of my personal favorites.</p>
+    <p>A simple and deicious grilled lamb recipe that can be prepared in under 30 minutes. This recipe was adapted from <a target="_blank" href="https://www.foodandwine.com/recipes/slow-grilled-rack-lamb-mustard-and-herbs">Food & Wine</a> and is one of my personal favorites.</p>
   </div>
 
   <div>
@@ -41,8 +41,8 @@
   </div>
 
   <div>
-    <h2>Suggested pairing</h2>
-    <p>Reds from France's Loire Valley, like Cabernet Francs from Chinon, go well with lamb. These wines are amazingly rich and gravelly with a high level of acidity.</p>
+    <h2>Notes</h2>
+    <p><b>Suggested pairing -</b> Reds from France's Loire Valley, like Cabernet Francs from Chinon, go well with lamb. These wines are amazingly rich and gravelly with a high level of acidity.</p>
   </div>
 </body>
 
